--- a/pub2/index.html
+++ b/pub2/index.html
@@ -5,7 +5,7 @@
     <link rel="Help" href="./docs/">
     <title>Daniel X's Editor</title>
     <meta name="description" content="Edit and publish code directly in the browser. Compiles down to HTML, CSS, and JavaScript to be easily served on GitHub pages, S3, or any other static host.">
-    <link rel="Progenitor" href="https://danielx.whimsy.space/editor/pub2/">
+    <link rel="Progenitor" href="https://danielx.whimsy.space/danielx.net/editor/pub2/">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.4/ace.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.4/ext-language_tools.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.7.1/coffee-script.min.js"></script>
